--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moralis": "^1.4.0",
+    "react-scroll": "^1.8.7",
     "web3uikit": "^0.1.155"
   },
   "devDependencies": {
