--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@openzeppelin/contracts": "^4.5.0",
+    "daisyui": "^2.15.2",
     "moralis": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "react-moralis": "^1.4.0",
     "react-scroll": "^1.8.7",
     "web3uikit": "^0.1.155"
